Created the htaccess, robots.txt files and edited the contents for SEO purposes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	    <!-- Basic page information -->
-		<meta name="description" content="Jump into the fast-paced, lucrative domain name, hosting and services business, check out our reseller plans, we provide you with everything you need: products, support, even a professional web site. And with our turnkey setup, your site is online from the moment you sign up!">
+		<meta name="description" content="Opportunity to make money on domains, hosting and services, we provide you with everything you need like products, support, even a professional site.">
 		<meta name="keywords" content="">
 		<meta name="author" content="Clas-design">
-	    <title class="text-capitalize">Make Money Now with the Hottest Reseller Plan Around</title>
+	    <title>How to Be a Domain, Hosting and Wed Services Reseller</title>
 
 	    <!-- Fav Icon -->
 	    <link rel="shortcut icon" href="favicon.ico">
@@ -65,7 +65,7 @@
 					  </div>
 
 					  <div class="col-xs-5 col-xs-offset-1 text-right" id="logo">
-					  		<a href="http://yeapnetwork.net"><img class="img-rounded" src="img/logo.jpg"></a>
+					  		<a href="http://yeapnetwork.net"><img class="img-rounded" src="img/logo.jpg" title="Yeap Network Logo" alt="Logo"></a>
 					  </div>
 				</div>
 			</div>
@@ -84,15 +84,36 @@
         <!-- SECTIONS AND INJECTED VIEWS -->
         <!-- Section home 21ACBA -->
         <section id="home" class="snap" data-color="#fff">
-        	<div ng-include="'include/home.html'"></div> <!-- end ng-include -->
+        	<div class="container">
+	        	<header>
+	        		<h1>How to Be a Domain, Hosting and Wed Services Reseller</h1>
+	        		<hr class="">
+	        	</header>
+	
+		        	<article class="row">
+		        		<header>
+		        			<h3>Build your own successful online business</h3>
+		        		</header>
+		        		<!-- angular templating -->
+            			<!-- this is where content will be injected -->
+            			<div class="col-md-12">
+	            			<p>We provide you with everything you need: products, support, even a professional web site. And with our turnkey setup, your site is online from the moment you sign up! Plus, you can:</p>
+	            			<ul>
+	            				
+	            				<li>Customize YOUR Web site. Add your own logo and images, customize colors and more. Or simply choose one of six ready-made designs. <a target="_blank" href="http://usawebsolution.com">See a Reseller Site in Action.</a></li>
+	            			</ul>
+            			</div>	
+		        	</article>  
+		        </div> <!-- End container -->
         <div class="container">
+
         	<article class="row panel-group aniview reallyslow" av-animation="zoomIn">
 		        			<div class="col-sm-4 panel panel-danger">
 						      <div class="panel-heading">
 						      	<h3>Basic Reseller Plan</h3>
 						      </div>
 						      <div class="panel-body">
-						      	<p class="lead">Jump into the fast-paced, lucrative domain name and services business!</p>
+						      	<p class="lead">Become a Domains, Hosting and Wed Services Reseller</p>
 						      </div>
 						      <p class="lead text-danger">Just $199.00</p>
 						      <div class="text-center">
@@ -107,8 +128,7 @@
 						      <div class="panel-body">
 						      	<p class="lead">The BEST buy rates available!</p>
 						      	<p>Get the most form your investment</p>
-						      	<p class="lead text-danger">Just $249.00</p>
-						      	  
+						      	<p class="lead text-danger">Just $249.00</p>  
 						      </div>
 						      <div class="text-center">
 					    		<a href="#reseller-plans" class="btn-lg btn-info" role="button">More</a>
@@ -240,6 +260,19 @@
 			    </div>
 			    <div class="clear"></div>	
         </footer>
+
+        <script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-91492813-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
+
+		<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58989dd896bb489c"></script> 
 
     </body>
     <script type="text/javascript" src="include/login.js"></script>
