--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 				    <li><a href="#my-account">My Account</a></li>
 				    <li><a href="#support">Support</a></li>
 				    <li><a href="#contact">Contact us</a></li>
+				    <li><a href="http://yeapnetwork.com/">Passive Income Referral</a></li>
 				  </ul>	  			
 			</div>
 
@@ -82,7 +83,7 @@
 			  <article class="container-fluid">
 			    <div class="row">
 			      <div class="col-md-12 text-center hd-video-text">
-			        <h1 class="aniview fast" av-animation="rotateIn">Make Money Now</h1>
+			        <h1 class="aniview fast" av-animation="rotateIn">Make Money Now!</h1>
 			        <h2>With the hottest reseller plan around</h2>
          	<div ng-include="'include/header.html'"></div>
          	<div class="row text-center">
@@ -192,7 +193,7 @@
         <section id="reseller-plans" class="parallax snap" data-color="#fff" data-img="img/dedicated-server-data-center-tb.jpg" alt="Reseller Plans">
         	<div class="container-fluid">
 	        	<header>
-	        		<h1>Reseller Plans</h1>
+	        		<h1>Hosting Reseller Plans</h1>
 	        	</header>
 	        	<div class="row panel-group">
 		        	<article class="col-md-8 panel panel-danger" >
@@ -203,7 +204,7 @@
             			<!-- this is where content will be injected -->
 	            			<div class="aniview panel-body"  av-animation="swing">
 		            			<div class="row text-justify">
-		            				<div class="col-md-5">
+		            				<div class="col-md-4 col-md-push-1">
 		            					<dl>
 										  <dt>Build your own successful online business!</dt>
 										  <dd>We provide you with everything you need: products, support, even a professional web site. And with our turnkey setup, your site is online from the moment you sign up! Plus, you can:</dd>
@@ -217,7 +218,7 @@
 										  	</dl>
 										</dl>	
 		            				</div>
-		            				<div class="col-md-7">
+		            				<div class="col-md-6 col-md-push-1">
 		            					<ul class="nav nav-tabs">
 		            						<li class="active">
 		            							<a data-toggle="tab" href="#compare-plans-pro">Compare Plans</a>
@@ -251,14 +252,7 @@
 												        <td>24/7 support for you and your customers</td>
 												        <td class="fa fa-check"></td>
 												        <td><span class="fa fa-check"></span></td>
-												      </tr>
-												      
-												      <tr>
-												        <td>Email Marketing & Templates</td>
-												        <td class="fa fa-check"></td>
-												        <td><span class="fa fa-check"></span></td>
-												      </tr>
-												      
+												      </tr>											      
 												      <tr>
 												        <td>Automated billing and renewals</td>
 												        <td class="fa fa-check"></td>
@@ -414,7 +408,7 @@
 
 		</script>
 
-		<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-589906a18924e926"></script> 
+		<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-589906a18924e926"></script>  
 
 		<script type="application/ld+json">
 {
