Created the free account button on the video background header and deleted some unwanted js files

--- a/index.html
+++ b/index.html
@@ -81,11 +81,21 @@
 			</video>
 			
 			  <article class="container-fluid">
-			    <div class="row">
-			      <div class="col-md-12 text-center hd-video-text">
-			        <h1 class="aniview fast" av-animation="rotateIn">Make Money Now!</h1>
-			        <h2>With the hottest reseller plan around</h2>
-         	<div ng-include="'include/header.html'"></div>
+				    <div class="row">
+				      <div class="col-md-12 text-center hd-video-text">
+				        <h1 class="aniview fast" av-animation="rotateIn">Make Money Now!</h1>
+				        <h2>With the hottest reseller plan around</h2>
+		         	<div ng-include="'include/header.html'"></div>
+		         	<!-- Sign in Button -->
+				    <div class="row">
+				    	<div class="col-md-6 text-right">
+				    		<a href="#reseller-plans" class="btn-lg btn-info" role="button">Sign Up</a>
+				    	</div>
+				    	<div class="col-md-6 text-left">
+				    		<a href="#my-account" class="btn-lg btn-info" role="button">Free Account</a>
+				    	</div>
+				    </div>
+			   </article>
          	<div class="row text-center">
 			    	<a href="#home">
 			      		<div class="col-md-offset-11 fa fa-caret-down faa-bounce animated aria-hidden='true'"></div>
