Added phone # on the top of the BG video on the header

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 		<!-- load css and fontawesome-->	    
 	    <link rel="stylesheet" type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 		<link rel="stylesheet" type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.9/font-awesome-animation.min.css'>
-		<!-- <link rel="stylesheet" type="text/css" href="css/animate.css"> -->
+    </noscript>
+    	<!-- <link rel="stylesheet" type="text/css" href="css/animate.css"> -->
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
 	    <link rel="stylesheet" href="css/pd.yeap.min.css" />
-    </noscript>
     <script>
       var loadDeferredStyles = function() {
         var addStylesNode = document.getElementById("deferred-styles");
@@ -137,6 +137,11 @@
 			
 			  <article class="container-fluid">
 				    <div class="row">
+				      <div class="col-md-3 col-md-offset-9">
+					      <div class="phone lead">
+					      	<a href="tel:+18884079575"><abbr title="Phone" class="glyphicon glyphicon-phone faa-burst animated"></abbr> 888-407-9575</a>
+					      </div>
+				      </div>
 				      <div class="col-md-12 text-center hd-video-text">
 				        <h1 class="aniview fast" av-animation="rotateIn">Make Money Now!</h1>
 				        <h2>With the hottest reseller plan around</h2>
@@ -221,7 +226,6 @@
 						      	<ul>
 					      	    	<li>Deluxe Linux Hosting with cPanel</li>
 					      	    	<li>Business Email</li>
-					      	    	<li>Business Plus Website Builder</li>
 					      	    	<li>Search Engine Visibility</li>
 						      	</ul>
 						      	<p><a href="https://www.yeapnetwork.com">FREE REFERRAL REWARD BONUS PROGRAM</a></p>
@@ -466,9 +470,9 @@
 	     -->	    
 	    <script type="text/javascript" src="js/pd.yeap.min.js"></script>
 	    <script type="text/javascript" src="js/parallax.js"></script>
-   	    <script async type="text/javascript" src="js/backgroundVideo.js"></script>
-	    <script async type="text/javascript" src="js/jquery-scroll-snap.js"></script> 
-	    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
+   	    <script type="text/javascript" src="js/backgroundVideo.js"></script>
+	    <script type="text/javascript" src="js/jquery-scroll-snap.js"></script> 
+	    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 
         <script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -493,7 +497,7 @@
 
 		<!-- Go to www.addthis.com/dashboard to customize your tools --> <script async type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-589906a18924e926"></script>  		
 	    <script async type="text/javascript" src="include/login.js"></script>
-	    <script async type="text/javascript" src="js/jquery.aniview.min.js"></script>
+	    <script type="text/javascript" src="js/jquery.aniview.min.js"></script>
 	    
 	    
 	    <script>
